# make_ai_coding

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
docs/: operations.md
scripts/: generate_prompt.py  run_example.py  web_app.py
src/app/: __init__.py  config.py  guards.py  logging_utils.py  prompt_generator.py  runtime.py  tasks.py  web_service.py
tests/: test_guards.py  test_prompt_generator.py  test_web_service.py
